@@ -1,49 +1,103 @@
 package com.isa.tasktrackerwebapp.service;
 
-import com.isa.tasktrackerwebapp.model.Task;
+import com.isa.tasktrackerwebapp.model.dto.TaskDto;
+import com.isa.tasktrackerwebapp.model.entity.Task;
+import com.isa.tasktrackerwebapp.repository.TaskRepository;
+import com.isa.tasktrackerwebapp.repository.UserRepository;
+import jakarta.transaction.Transactional;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
-import java.util.Comparator;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 class TaskServiceImpl implements TaskService {
+    private static final Logger logger = LoggerFactory.getLogger(TaskServiceImpl.class);
 
+    private final TaskRepository taskRepository;
     private final LoginService loginService;
+    private final UserRepository userRepository;
 
-    TaskServiceImpl(LoginService loginService) {
+    TaskServiceImpl(LoginService loginService, TaskRepository taskRepository, UserRepository userRepository) {
         this.loginService = loginService;
+        this.taskRepository = taskRepository;
+        this.userRepository = userRepository;
     }
 
     @Override
     public List<Task> getSortedAndFilteredTasks(String sortBy, String searchTaskName, String filterActive) {
-        List<Task> taskList = JsonTaskDataManager.getTasks();
+        List<Task> taskList;
+        logger.debug("Sorting and filtering tasks. sortBy: {}, searchTaskName: {}, filterActive: {}", sortBy, searchTaskName, filterActive);
 
-        if ("oldestByStartDate".equals(sortBy)) {
-            taskList.sort(Comparator.comparing(Task::getTaskStart));
-        } else if ("newestByStartDate".equals(sortBy)) {
-            taskList.sort(Comparator.comparing(Task::getTaskStart).reversed());
-        } else if ("oldestByEndDate".equals(sortBy)) {
-            taskList.sort(Comparator.comparing(Task::getTaskEnd));
-        } else if ("newestByEndDate".equals(sortBy)) {
-            taskList.sort(Comparator.comparing(Task::getTaskEnd).reversed());
+        if ("ascByStartDate".equals(sortBy)) {
+            taskList = taskRepository.findAllByOrderByTaskStartAsc();
+        } else if ("descByStartDate".equals(sortBy)) {
+            taskList = taskRepository.findAllByOrderByTaskStartDesc();
+        } else if ("ascByEndDate".equals(sortBy)) {
+            taskList = taskRepository.findAllByOrderByTaskEndAsc();
+        } else if ("descByEndDate".equals(sortBy)) {
+            taskList = taskRepository.findAllByOrderByTaskEndDesc();
+        } else {
+            taskList = taskRepository.findAll();
         }
 
         taskList = filterTasks(taskList, searchTaskName, filterActive);
+
+        logger.debug("Retrieved {} tasks from the database.", taskList.size());
 
         return taskList;
     }
 
     @Override
-    public void saveTask(Task form) {
-        JsonTaskDataManager.saveNewTask(form, loginService.getLoggedInUser());
+    public List<Task> findLoggedInUsersActiveTasks() {
+        List<Task> taskList = new ArrayList<>();
+        logger.debug("Sorting and filtering tasks");
+
+        if(loginService.isUserLoggedIn()) {
+            taskList = taskRepository.findAllByUserAndActiveOrderByTaskEndAsc(loginService.getLoggedInUser(), true);
+        }
+
+        logger.debug("Retrieved {} tasks from the database.", taskList.size());
+
+        return taskList;
+    }
+
+    @Override
+    public boolean taskEndInvalid(Task form) {
+        return false;
+    }
+
+    public Task mapTaskDtoToEntityTask(TaskDto taskDto) {
+        Task task = new Task();
+
+        task.setTaskName(taskDto.getTaskName());
+        task.setTaskStart(taskDto.getTaskStart());
+        task.setTaskEnd(taskDto.getTaskEnd());
+        task.setTaskDescription(taskDto.getTaskDescription());
+        task.setUser(userRepository.findByLogin(taskDto.getUser()).get());
+        task.setActive(taskDto.getActive());
+
+        return task;
+    }
+
+    @Override
+    public void saveTask(TaskDto form) {
+        form.setActive(true);
+        taskRepository.save(mapTaskDtoToEntityTask(form));
     }
 
     private List<Task> filterTasks(List<Task> taskList, String searchTaskName, String filterActive) {
-        return taskList.stream()
+        logger.debug("Filtering tasks. searchTaskName: {}, filterActive: {}", searchTaskName, filterActive);
+
+        List<Task> filteredTasks = taskList.stream()
                 .filter(task -> isNameAndActiveMatch(searchTaskName, filterActive, task))
-                .collect(Collectors.toList());
+                .toList();
+
+        logger.debug("Filtered tasks: {}", filteredTasks);
+
+        return filteredTasks;
     }
 
     private boolean isNameAndActiveMatch(String searchTaskName, String filterActive, Task task) {
@@ -53,7 +107,36 @@ class TaskServiceImpl implements TaskService {
     }
 
     @Override
-    public boolean taskEndValid(Task form) {
+    public boolean taskEndInvalid(TaskDto form) {
         return form.getTaskEnd().isBefore(form.getTaskStart());
+    }
+
+    @Override
+    @Transactional
+    public void editTask(TaskDto editedTask, Task task) {
+        task.setTaskDescription(editedTask.getTaskDescription());
+        task.setTaskEnd(editedTask.getTaskEnd());
+        task.setTaskName(editedTask.getTaskName());
+        task.setTaskStart(editedTask.getTaskStart());
+
+        taskRepository.save(task);
+        logger.info("Task with Id " + task.getId() + " edited");
+    }
+    @Override
+    public void toggleTaskStatus(Long taskId) {
+        Task task = taskRepository.findTaskById(taskId);
+
+        if (task != null) {
+            task.setActive(!task.getActive());
+            taskRepository.save(task);
+            logger.info("Task with Id " + taskId + (task.getActive() ? " activated" : " deactivated"));
+        } else {
+            logger.warn("Task with Id " + taskId + " not found");
+        }
+    }
+
+    @Override
+    public Task findTaskById(Long id){
+        return taskRepository.findTaskById(id);
     }
 }
